--- a/TODO.txt
+++ b/TODO.txt
@@ -1,21 +1,13 @@
-TODO: (in-progress) refactor to multiple classes now that psake is building a single-file
-
-TODO: wrap update and server processes inside a try/finally that will update the exit code?
-      - is anything even checking exit codes right now? Nope...
-      - THIS DIDN'T WORK... sending WM close stops the foreground process (VRisingServer) but then powershell immediately dies, so to address that:
-
-TODO^: overhaul DoCommands to use process monitors /  watchers
-       - rather than commands, launch a process monitor
-       - runs a loop, sleeps every second, then checks the command queue
-       - if the command queue goes empty and the server is stopped, stop the process monitor
-       - if the process monitor isn't started when a command is issued, start the process monitor
-       - if a command is in the queue (file), pulls it off the top, processes it, then writes the removal once it finishes
-       - kill commands for update/start will still directly target the underlying process
-       - stop commands will issue a command in the commandqueue
-       - can also stop the current command itself by killing the process id or setting kill = true?
-       - every loop, readproperties:
-         - CommandQueue
-         - KeepCommandRunning
+(in-progress) TODO^: overhaul DoCommands to use process monitors /  watchers
+      - rather than commands, launch a process monitor
+      - runs a loop, sleeps every second, then checks the command queue
+      - if the command queue goes empty and the server is stopped, stop the process monitor
+      - if the process monitor isn't started when a command is issued, start the process monitor
+      - if a command is in the queue (file), pulls it off the top, processes it, then writes the removal once it finishes
+      - kill commands for update/start will still directly target the underlying process
+      - stop commands will issue a command in the commandqueue
+      - can also stop additional commands in the queue by disabling the server
+      TODO: wait for commands to finish (start to start, stop to exit, update to exit) and grab exit codes
 
 TODO: add a Wait-VRisingServer (vrwait) command
       - checks if a command is running
@@ -45,3 +37,25 @@ TODO: check process name as a safety measure
 TODO: zip/prune extra log files on rotation
 
 TODO: install steamcmd / rcu for the user
+
+TODO: CI Planning
+
+on every PR ->
+  <- run tests
+
+on every commit to Main ->
+  <- run tests
+  <- 
+
+use semantic-release:
+- https://github.com/semantic-release/semantic-release/blob/master/docs/support/FAQ.md#can-i-use-semantic-release-to-publish-non-javascript-packages
+- use a docker image with npm already installed (latest LTS), and then just install the package on demand
+  - https://github.com/semantic-release/semantic-release/blob/master/docs/usage/installation.md#global-installation
+- disable npm plugin (@semantic-release/npm) and enable one for my workflow
+- customizable env vars:
+  - https://github.com/semantic-release/semantic-release/blob/master/docs/usage/configuration.md#git-environment-variables
+
+TODO: with local environment, test out getting the exec plugin to:
+- update the moduleManifest with the version and release notes
+
+https://github.com/semantic-release/semantic-release/blob/master/docs/developer-guide/js-api.md#result
