--- a/TODO.txt
+++ b/TODO.txt
@@ -20,14 +20,14 @@ TODO: add a Wait-VRisingServer (vrwait) command
         - waits until IsStopped()
 
 TODO(?): output server object on each command for chaining, e.g.:
-         - vrget foo | vrannounce "stopping server for update" | vrstop | vrwait | vrupdate | vrwait | vrstart | vrwait | vrannounce "server update complete"
+         - vrget foo | vrsay "stopping server for update" | vrstop | vrwait | vrupdate | vrwait | vrstart | vrwait | vrannounce "server update complete"
 
 TODO: rotate existing log on start
 
 TODO: add update on restart (enhance Start command)
 
 TODO: add RCU support
-TODO: add vrannounce
+TODO: add vrsay
 TODO: add auto-announcerestart on restarts
 
 TODO: add date to lastupdate
@@ -37,25 +37,3 @@ TODO: check process name as a safety measure
 TODO: zip/prune extra log files on rotation
 
 TODO: install steamcmd / rcu for the user
-
-TODO: CI Planning
-
-on every PR ->
-  <- run tests
-
-on every commit to Main ->
-  <- run tests
-  <- 
-
-use semantic-release:
-- https://github.com/semantic-release/semantic-release/blob/master/docs/support/FAQ.md#can-i-use-semantic-release-to-publish-non-javascript-packages
-- use a docker image with npm already installed (latest LTS), and then just install the package on demand
-  - https://github.com/semantic-release/semantic-release/blob/master/docs/usage/installation.md#global-installation
-- disable npm plugin (@semantic-release/npm) and enable one for my workflow
-- customizable env vars:
-  - https://github.com/semantic-release/semantic-release/blob/master/docs/usage/configuration.md#git-environment-variables
-
-TODO: with local environment, test out getting the exec plugin to:
-- update the moduleManifest with the version and release notes
-
-https://github.com/semantic-release/semantic-release/blob/master/docs/developer-guide/js-api.md#result
